--- a/front-end/src/assets/layout/styles/theme/lara-light-blue/theme.css
+++ b/front-end/src/assets/layout/styles/theme/lara-light-blue/theme.css
@@ -1,5 +1,6 @@
 :root {
-  font-family: "Inter var", sans-serif;
+  font-family: "Inter var",
+    sans-serif;
   font-feature-settings: "cv02", "cv03", "cv04", "cv11";
   font-variation-settings: normal;
   --font-family: "Inter var", sans-serif;
