--- a/front-end/src/app/demo/components/dashboard/dashboard.component.html
+++ b/front-end/src/app/demo/components/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
             <div class="flex justify-content-between mb-1">
                 <div>
                     <span class="block text-500 font-medium mb-2 font-bold">Sua Localização</span>
-                    <button (click)="showDialogSelecionaCidade()" class="p-button-rounded p-button-outlined w-full"
+                    <button (click)="showDialogSelecionaCidade()" class="p-button-rounded w-full"
                         pButton pRipple type="button" iconPos="right" label="Braço do Norte"
                         icon="pi pi-angle-down"></button>
                 </div>
@@ -43,8 +43,8 @@
             <div class="flex justify-content-between mb-1">
                 <div>
                     <span class="block text-500 font-medium mb-2 font-bold">Eventos na Cidade</span>
-                    <label style="font-size: 30px; color:#2563eb" class="m-0 p-0 font-bold">{{ cardEventos.length
-                        }}</label>
+                    <label *ngIf="cardTotais.eventosCidade" style="font-size: 30px; color:#2563eb"
+                        class="m-0 p-0 font-bold">{{ cardTotais.eventosCidade }}</label>
                 </div>
 
                 <div class="flex align-items-center justify-content-center border-round"
@@ -252,27 +252,27 @@
 
         <div class="card">
 
-            <p-dataView #dv [value]="products" [paginator]="true" [rows]="8" filterBy="name" [sortField]="sortField"
-                [sortOrder]="sortOrder" layout="grid">
+            <p-dataView #dv *ngIf="eventsIsNotEmpty()" [value]="cardEventos" [paginator]="true" [rows]="8"
+                filterBy="name" [sortField]="sortField" [sortOrder]="sortOrder" layout="grid">
                 <ng-template pTemplate="header">
-                    <div class="flex flex-column md:flex-row md:justify-content-between gap-2">
+                    <div class="flex flex-column md:flex-row md:justify-content-between gap-2 pb-0">
                         <div class="flex flex-row align-items-center">
-                            <h5>Eventos</h5>
+                            <label style="letter-spacing: 3px; font-size: 20px; font-weight: 500;">Eventos</label>
                         </div>
 
                         <div class="flex flex-row gap-4">
-                            <button (click)="showDialogNovoEvento()" class="p-button-rounded p-button-outlined" pButton
-                                pRipple type="button" label="Criar Evento" icon="fa-solid fa-plus"></button>
+                            <button (click)="showDialogNovoEvento()" class="p-button-rounded" pButton
+                                pRipple type="button" label="Criar Evento"></button>
 
                             <p-dropdown [options]="sortOptions" placeholder="Filtrar Esporte Tipo"
                                 (onChange)="onSortChange($event)"></p-dropdown>
                             <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
                         </div>
-
                     </div>
                 </ng-template>
 
-                <ng-template let-products pTemplate="listItem">
+                <ng-template let-cardEventos pTemplate="listItem">
+
                     <div class="col-12" *ngFor="let evento of cardEventos">
                         <div class="flex flex-column md:flex-row align-items-center p-3 w-full card m-2 p-0 surface-border"
                             style="color: #FFFFFF; background-color: #2563eb;background-image: linear-gradient(170deg, #2563eb 0%, #39b7b7 100%);">
@@ -298,10 +298,9 @@
 
                 <!-- background-color: #2563eb;background-image: linear-gradient(180deg, #2563eb 0%, #39b7b7 100%); -->
 
-                background-color: #3a89ef; background-image: linear-gradient(115deg, #3a89ef 0%, #acc1f8 100%);
-
-
                 <ng-template let-products pTemplate="gridItem">
+                    <p-divider class="p-0"></p-divider>
+
                     <div class="grid grid-nogutter">
                         <div class="col-12 md:col-4" *ngFor="let evento of cardEventos">
                             <div class="card m-2 p-0 surface-border"
@@ -309,27 +308,31 @@
                                 <div class="flex flex-row align-items-center justify-content-between p-5">
                                     <div class="flex flex-column">
                                         <div style="font-size: 18px;" class="font-bold">
-                                            {{evento.esporteTipo.toUpperCase()}}</div>
+                                            {{evento.esporteTipo}}</div>
                                     </div>
 
                                     <img class="mr-3 mt-3 ml-4" style="transform: scale(3);border-radius: 20%;"
-                                        width="35px" height="30px" [src]="evento.urlImagem" />
+                                        width="35px" height="30px" [src]="getImageSport(evento.esporteTipo)" />
                                 </div>
 
-                                <div class="flex flex-row justify-content-between align-items-center pt-4 pb-4 pr-4 pl-4">
+                                <div
+                                    class="flex flex-row justify-content-between align-items-center pt-4 pb-4 pr-4 pl-4">
 
                                     <div class="flex flex-column">
                                         <div style="opacity: 90%;" class="mb-2">
                                             <label style="opacity: 90%;">Horário</label>
                                             <i class="fa-regular fa-clock ml-2"></i>
                                         </div>
-                                        <label class="font-bold" style="font-size: 16px; ">14/05/2022 7:00:00</label>
+                                        <div>
+                                            <label class="font-bold" style="font-size: 14px; ">{{
+                                                getHorario(evento.horario)}}</label>
+                                        </div>
                                     </div>
 
                                     <div class="flex flex-row align-items-center justify-content-between mb-1">
 
                                         <div class="mr-3 font-bold">
-                                            {{evento.quantidadePraticantes}} / {{evento.quantidade}}
+                                            {{evento.quantidadePraticantes}} / {{evento.quantidadeParticipantes}}
                                         </div>
 
                                         <div class="flex align-items-center justify-content-center">
@@ -352,7 +355,8 @@
 
                                             <i class="pi pi-map-marker ml-2"></i>
                                         </div>
-                                        <label class="font-bold" style="font-size: 16px; ">Ginásio de Esporte Atilio Ghisi</label>
+                                        <label class="font-bold" style="font-size: 16px; ">Ginásio de Esporte Atilio
+                                            Ghisi</label>
                                     </div>
 
                                     <!-- <p-chip label="Ginásio de Esporte Atilio Ghisi" icon="pi pi-map-marker" /> -->
@@ -368,7 +372,21 @@
                     </div>
                 </ng-template>
             </p-dataView>
+
+            <div *ngIf="!eventsIsNotEmpty()" class="flex flex-column align-items-center justify-content-center pb-5">
+                <img class="mt-5 mb-3" style="transform: scale(1);" width="200px" height="200px" [src]="'assets/layout/vazio.png'" />
+
+                <h4 class="pt-4">Infelizmente nenhum evento registrado nessa cidade :\</h4>
+
+                <h5 class="p-1 m-0 pb-4">Sinta a vontade de criar um!</h5>
+
+
+                <button (click)="showDialogNovoEvento()" class="p-button-rounded w-2 " pButton pRipple type="button"
+                    label="Criar Evento"></button>
+            </div>
+
         </div>
+
     </div>
 
     <!-- <div class="col-12 xl:col-6">
